konversationkimproxyicondir = $(kde_datadir)/konversation/images
konversationkimproxyicon_DATA = cr16-action-away.png cr16-action-offline.png cr16-action-online.png cr22-action-away.png cr22-action-offline.png cr22-action-online.png cr32-action-away.png cr32-action-offline.png cr32-action-online.png
